--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "firebase": "^9.9.4",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.10",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
