--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
     "firebase": "^9.9.4",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.10",
     "react": "^18.2.0",
     "react-awesome-stars-rating": "^0.13.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
